--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-compass": "~0.2.0",
     "grunt-contrib-concat": "~0.3.0",
@@ -11,7 +12,7 @@
     "grunt-contrib-nodeunit": "~0.1.2",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.0",
-    "grunt-shell": "~0.4.0",
+    "grunt-shell": "^1.1.2",
     "grunt-simple-watch": "^0.1.2",
     "load-grunt-tasks": "~1.0.0"
   }
