--- a/patternlab/config/config.ini
+++ b/patternlab/config/config.ini
@@ -9,7 +9,7 @@ v  = "0.7.12"
 ie = "scss,DS_Store,ruby-version,tmp,map,rb"
 
 // directories and files to ignore when building or watching the source dir, separate with a comma
-id = ".sass-cache,sass,Gemfile,Gemfile.lock"
+id = ".sass-cache,sass,Gemfile,Gemfile.lock,detail.css,home.css,landing.css,sidebar-left.css,sidebar-right.css,no-mq.css,css/overrides/,css/panels-admin/"
 
 // choose if these services should be loaded in the nav and their ports
 autoReloadNav  = "true"
