--- a/puppet/manifests/hieradata/sites/localhost.localdomain.yaml
+++ b/puppet/manifests/hieradata/sites/localhost.localdomain.yaml
@@ -20,6 +20,12 @@ elasticsearch::instances:
   es-01:
     datadir: 
       - /opt/elasticsearch
+    config:
+      http.cors.enabled: true
+      http.cors.allow-origin: '"*"'
+      http.cors.allow-methods: '"OPTIONS, HEAD, GET, POST, PUT, DELETE"'
+      http.cors.allow-headers : '"X-Requested-With,X-Auth-Token,Content-Type, Content-Length"'
+      http.jsonp.enable: true
 
 forumone::ports:
   - 80
