--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,29 @@
+# IDE specific files
 .buildpath
 .project
 .settings
+.idea
+
+# Vagrant
 .vagrant
+
+# NPM
 node_modules
-Vagrantfile.local
+
+# Bower
+bower_components
+
+# OSX file
 .DS_Store
-.sass-cache
+
 /_site
-/tmp
-.idea/
+
+# Local configuration
+Vagrantfile.local
+settings.local.php
+
+# SASS cache
+.sass-cache
+
+/private
+/secret.json
