--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "include-all": "^0.1.6",
     "load-grunt-tasks": "^3.2.0",
     "grunt-sync": "~0.2.3",
-    "grunt-contrib-copy": "^0.8.0"
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-sass-globbing": "~1.4.0",
+    "grunt-sass": "~1.1.0",
+    "grunt-bower-task": "~0.4.0",
+    "grunt-ssh": "~0.12.8"
+  },
+  "dependencies": {
+    "grunt-css-url-embed": "~1.6.1"
   }
 }
