--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-sass-globbing": "~1.4.0",
     "grunt-sass": "~1.1.0",
+    "grunt-postcss": "~0.7.1",
+    "postcss-assets": "~4.0.1",
+    "autoprefixer": "~6.3.1", 
     "grunt-bower-task": "~0.4.0",
     "grunt-ssh": "~0.12.8"
-  },
-  "dependencies": {
-    "grunt-css-url-embed": "~1.6.1"
   }
 }
