--- a/public/sites/all/themes/gesso/.gitignore
+++ b/public/sites/all/themes/gesso/.gitignore
@@ -4,7 +4,7 @@
 
 # Generated files
 *.sass-cache/
-sass/partials/glob
+sass/partials/sass-globbing
 # Pattern Lab
 #patternlab/public/*
 #!patternlab/public/styleguide/
