--- a/tests/behat/behat.jenkins.yml
+++ b/tests/behat/behat.jenkins.yml
@@ -3,7 +3,7 @@ dev:
         features: 'features'
     extensions:
         Behat\MinkExtension\Extension:
-            base_url: http://forumone:f1dev@spoke.dev.ggc2.forumone.com/
+            base_url: http://forumone:f1dev@dev.gie.byf1.io/
             goutte: ~
             selenium2:
               browser:              'chrome'
@@ -23,14 +23,14 @@ dev:
             api_driver: 'drush'
             drush:
               binary: '/usr/local/bin/drush'
-              alias: 'ggc.dev'
+              alias: 'dai-usaid.dev'
               global_options: '--alias-path=../../'
 stage:
     paths:
         features: 'features'
     extensions:
         Behat\MinkExtension\Extension:
-            base_url: http://forumone:f1dev@spoke.stage.ggc2.forumone.com/
+            base_url: http://forumone:f1dev@stage.gie.byf1.io/
             goutte: ~
             selenium2:
               browser:              'chrome'
@@ -50,12 +50,12 @@ stage:
             api_driver: 'drush'
             drush:
               binary: '/usr/local/bin/drush'
-              alias: 'ggc.dev'
+              alias: 'dai-usaid.dev'
 
 sauce-dev:
     extensions:
         Behat\MinkExtension\Extension:
-            base_url: http://forumone:f1dev@spoke.dev.ggc2.forumone.com/
+            base_url: http://forumone:f1dev@dev.gie.byf1.io/
             selenium2:
               browser: chrome
               wd_host: dmcdermott:af313bc8-1daf-472d-8054-fc4b59449489@ondemand.saucelabs.com/wd/hub
@@ -74,12 +74,12 @@ sauce-dev:
             api_driver: 'drush'
             drush:
               binary: '/usr/local/bin/drush'
-              alias: 'ggc.dev'
+              alias: 'dai-usaid.dev'
               global_options: '--alias-path=../../'
 sauce-stage:
     extensions:
         Behat\MinkExtension\Extension:
-            base_url: http://forumone:f1dev@spoke.stage.ggc2.forumone.com/
+            base_url: http://forumone:f1dev@stage.gie.byf1.io/
             selenium2:
               browser: chrome
               wd_host: dmcdermott:af313bc8-1daf-472d-8054-fc4b59449489@ondemand.saucelabs.com/wd/hub
@@ -98,5 +98,5 @@ sauce-stage:
             api_driver: 'drush'
             drush:
               binary: '/usr/local/bin/drush'
-              alias: 'ggc.stage'
+              alias: 'dai-usaid.stage'
               global_options: '--alias-path=../../'
