GES-654 #comment Attempt on using behat-3 in order to test

--- a/tests/behat-3/behat.yml
+++ b/tests/behat-3/behat.yml
@@ -30,7 +30,7 @@ default:
             selectors:
                 logged_in_selector: "body.logged-in"
                 login_form_selector: "form#user-login"
-            api_driver: 'drush'
+            api_driver: 'drupal'
             drush:
 #              alias: 'dai-usaid.local'
               root: '/vagrant/public'
@@ -106,5 +106,4 @@ local-selenium:
                 login_form_selector: "form#user-login"
             api_driver: 'drush'
             drush:
-              alias: 'dai-usaid.local'
               root: '/vagrant/public'
