GIE-870 #comment Removed behat as it was causing problems, changed to new localhost.yml, added grunt-contrib-compass

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -23,7 +23,7 @@
     "drupal_version": "7.50",
     "features": true,
     "cmi": false,
-    "drupal_theme": "",
+    "drupal_theme": "Gesso",
     "install_drupal": false
   },
   "generator-web-starter-capistrano": {
