--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "themePath": "public/sites/all/themes/gesso",
   "longformThemePath": "public/sites/all/themes/gesso_longform",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:forumone/DAI-USAID.git"
+  },
   "devDependencies": {
     "grunt": "^0.4.1",
+    "grunt-contrib-compass": "^1.0.2",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-jshint": "^0.11.2",
